--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -328,6 +328,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.next = None\n",
+    "\n",
+    "def count_length(A):\n",
+    "    x = 0\n",
+    "    while A is not None:\n",
+    "        x = x + 1\n",
+    "        A = A.next\n",
+    "    return x\n",
+    "\n",
+    "def fast_forward(A, n):\n",
+    "    for i in range(n):\n",
+    "        A = A.next\n",
+    "    return A\n",
+    "\n",
+    "def find_intersection(A, B):\n",
+    "    a = count_length(A)\n",
+    "    b = count_length(B)\n",
+    "    if a > b:\n",
+    "        A = fast_forward(A, a-b)\n",
+    "    else:\n",
+    "        B = fast_forward(B, b-a)\n",
+    "\n",
+    "    while A != B:\n",
+    "        A = A.next\n",
+    "        B = B.next\n",
+    "    return A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 \n",
+      "\n",
+      "6 1 2 3 4 5 \n",
+      "\n",
+      "7 5 \n",
+      "\n",
+      "1\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "A1 = ListNode(1)\n",
+    "A2 = ListNode(2)\n",
+    "A3 = ListNode(3)\n",
+    "A4 = ListNode(4)\n",
+    "A5 = ListNode(5)\n",
+    "B1 = ListNode(6)\n",
+    "C1 = ListNode(7)\n",
+    "A1.next = A2\n",
+    "A2.next = A3\n",
+    "A3.next = A4\n",
+    "A4.next = A5\n",
+    "B1.next = A1\n",
+    "C1.next = A5\n",
+    "def print_list(a):\n",
+    "    while a != None:\n",
+    "        print a.val, \n",
+    "        a = a.next\n",
+    "    print '\\n'\n",
+    "        \n",
+    "print_list(A1)\n",
+    "print_list(B1)\n",
+    "print_list(C1)\n",
+    "print find_intersection(A1, B1).val\n",
+    "print find_intersection(A1, C1).val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_intersection(A1, B1).val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def findMedianSortedArrays(nums1, nums2):\n",
+    "    a, b = sorted((nums1, nums2), key=len)\n",
+    "    la, lb = len(a), len(b)\n",
+    "    mid = (la + lb - 1) / 2\n",
+    "    h1, t1 = 0, la\n",
+    "    while h1 < t1:\n",
+    "        m1 = (h1 + t1) / 2\n",
+    "        m2 = mid - m1 -1\n",
+    "        if m2 < 0 or a[m1] >= b[m2]:\n",
+    "            t1 = m1\n",
+    "        else:\n",
+    "            h1 = m1 + 1\n",
+    "    i = h1\n",
+    "    nextfew = sorted(a[i:i+2] + b[mid-i:mid-i+2])\n",
+    "    return (nextfew[0] + nextfew[1 - (la+lb)%2]) / 2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 12] [6, 7]\n",
+      "[6, 7, 11, 12]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6.5"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [1, 2, 3, 4, 11, 12]\n",
+    "B = [0, 5, 6, 7, 8, 9, 10, 13]\n",
+    "findMedianSortedArrays(A, B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
